--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MaterialTour</title>
+  <title>WebTour</title>
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-  <link rel="stylesheet" href="css/MaterialTour.css">
+  <link rel="stylesheet" href="css/WebTour.css">
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
   <!-- Compiled and minified JavaScript -->
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-  <script src="javascript/MaterialTour.js"></script>
+  <script src="javascript/WebTour.js"></script>
 </head>
 <body>
   <nav>
@@ -28,8 +29,8 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col s12 m6 first">
-        <div class="card blue-grey darken-1">
+      <div class="col s12 m6">
+        <div class="card blue-grey darken-1 first">
           <div class="card-content white-text">
             <span class="card-title">Card Title</span>
             <p>I am a very simple card. I am good at containing small bits of information.
@@ -61,5 +62,8 @@
 
     </div>
   </div>
+  <script type="text/javascript">
+    $(".first").WebTour("bottom", "right", "small");
+  </script>
 </body>
 </html>
