--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="container">
     <div class="row">
       <div class="col s12 m6">
-        <div class="card blue-grey darken-1 first">
+        <div class="card blue-grey darken-1 second">
           <div class="card-content white-text">
             <span class="card-title">Card Title</span>
             <p>I am a very simple card. I am good at containing small bits of information.
@@ -44,7 +44,7 @@
       </div>
 
       <div class="col s12 m6">
-        <ul class="collapsible" data-collapsible="accordion">
+        <ul class="collapsible first" data-collapsible="accordion">
           <li>
             <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
             <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
@@ -63,7 +63,8 @@
     </div>
   </div>
   <script type="text/javascript">
-    $(".first").WebTour("bottom", "right", "small");
+    $(".first").WebTour("bottom", "right", "small", "Nekaj besedila o tem bloku!");
+    $(".second").WebTour("bottom", "right", "small", "Pa še nekaj o tem.");
   </script>
 </body>
 </html>
