--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
   </div>
   <script type="text/javascript">
-    $(".first").WebTour("bottom", "right", "small", "Nekaj besedila o tem bloku!");
+    $(".first").WebTour("bottom", "right", "small", "Nekaj besedila o tem bloku! Da vidimo kako bo izgledalo. No, zaenkrat deluje kar v redu.");
     $(".second").WebTour("bottom", "right", "small", "Pa še nekaj o tem.");
   </script>
 </body>
